--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = b421992
+	base = 3f0e8fe
 	trimbase = 
 	parent = rpm/indigo/hector_components_description
-	previous = 
+	previous = b421992
