--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 3faba33
+	base = 1b4aee2
 	trimbase = 
 	parent = rpm/indigo/hector_xacro_tools
-	previous = 
+	previous = 3faba33
