--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = c539031
+	base = ecebf1b
 	trimbase = 
 	parent = rpm/indigo/hector_sensors_description
-	previous = 
+	previous = c539031
