--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 103805d
+	base = 835e346
 	trimbase = 
 	parent = rpm/indigo/hector_models
-	previous = 
+	previous = 103805d
